--- a/src/index.css
+++ b/src/index.css
@@ -28,9 +28,19 @@ div#appHome {
   width: 100%;
 }
 
-.detail-half,
+.detail-half{
+  width: 40%;
+  background-color: #F5F5F5;
+}
+
 .image-half {
-  width: 50%;
+  width: 60%;
   height: 100%;
   overflow: hidden;
+}
+
+.image-half {
+  background-image: url('./media/glaciersummit.jpg');
+  background-position: center;
+  background-size: cover;
 }
