--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
+@font-face {
+  font-family: 'Ubuntu';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Ubuntu'), url(./fonts/Ubuntu/Ubuntu-Regular.ttf) format('woff');
+}
+
+@font-face {
+  font-family: 'Ubuntu';
+  font-style: bold;
+  font-weight: 700;
+  src: local('Ubuntu'), url(./fonts/Ubuntu/Ubuntu-Bold.ttf) format('woff');
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -12,6 +26,11 @@ code {
     monospace;
 }
 
+h1 {
+  margin: 0;
+  padding: 0;
+}
+
 html,
 div#root,
 div.App,
@@ -21,4 +40,33 @@ body {
   margin: 0;
   padding: 0;
   overflow: hidden;
+}
+
+div#splashArea{
+  background-image: url('./media/glaciersummit.jpg');
+  background-position: center;
+  background-size: cover;
+  height: 100%;
+  width: 100%;
+}
+
+div#welcomeText {
+  width: 100%;
+  height: 25%;
+  padding: 50px 0 0;
+}
+
+div#welcomeText h1,
+div#welcomeText h2 {
+  font-family: Ubuntu , sans-serif;
+  font-weight: 700;
+  color: #FFF
+}
+
+div#welcomeText h1 {
+  font-size: 75px;
+}
+
+div#welcomeText h1 {
+  font-size: 75px;
 }
