--- a/src/index.css
+++ b/src/index.css
@@ -70,3 +70,31 @@ div#welcomeText h1 {
 div#welcomeText h1 {
   font-size: 75px;
 }
+
+.contact-icons a img {
+  width: 50%;
+}
+
+.contact-icons a {
+  width: 25%;
+}
+
+.contact-icons {
+  width: 30%;
+  display: flex;
+  justify-content: space-between;
+  margin: 40px 0 0;
+}
+
+div#personalInfo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.contact-icons a {
+  width: 20%;
+  border: 3px solid #FFF;
+  padding: 20px 0;
+  border-radius: 50%;
+}
