--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,7 @@ body {
 }
 
 div#splashArea {
-  background-image: url('./media/glaciersummit.jpg');
+  background-image: url('./media/20220626_042451.jpg');
   background-position: center;
   background-size: cover;
   height: 100%;
