--- a/src/index.css
+++ b/src/index.css
@@ -157,8 +157,8 @@ div#portfolioExamples.active {
 
 .project-details {
   background: #FFFFFF;
-  border-top: 3px solid rgba(0, 0, 0, 0.6);
-  height: 230px;
+  height: 300px;
+  padding: 10px 20px;
 }
 
 .project-details a {
@@ -178,10 +178,16 @@ div#portfolioExamples.active {
   flex-wrap: wrap;
   width: 80%;
   justify-content: space-evenly;
-  margin: 0 auto;
+  margin: 20px auto;
 }
 
 .tech-badges .tech-badge {
   width: auto;
   height: 25px;
+}
+
+.project-screenshot {
+  background: #FFF;
+  height: 175px;
+  overflow: hidden;
 }
