Fixed state management so it using state contect to affect all neccessary files

--- a/src/css/responsive-styles.css
+++ b/src/css/responsive-styles.css
@@ -15,7 +15,7 @@
         flex-basis: 60%;
     }
 
-    div#portfolioExamples.active {
+    div#portfolioExamples {
         justify-content: center;
     }
 
