--- a/src/index.css
+++ b/src/index.css
@@ -135,14 +135,33 @@ div#spalshWelcome.profile-open {
   display: none;
 }
 
-div#portfolioExamples.active {
+#portfolioPopUp {
+  display: none;
+}
+
+#portfolioPopUp.active {
+  display: block;
   height: 100%;
-  background: rgba(245, 245, 245, 0.7);
+}
+
+
+div#portfolioExamples {
+  height: 100%;
   display: flex;
   justify-content: space-between;
   padding: 50px 0;
   flex-wrap: wrap;
   overflow: scroll;
+}
+
+div#portfolioExamples {
+  background: rgba(245, 245, 245, 0.7);
+}
+
+h1.portfolio-header{
+  margin: 0;
+  padding-top: 20px;
+  background: rgba(245, 245, 245, 1);
 }
 
 .project img {
@@ -193,4 +212,12 @@ div#portfolioExamples.active {
   background: #FFF;
   height: 175px;
   overflow: hidden;
+}
+
+span#closePortfolio {
+    position: absolute;
+    right: 10%;
+    top: 100px;
+    font-size: 30px;
+    font-weight: 700;
 }
