--- a/src/index.css
+++ b/src/index.css
@@ -48,7 +48,7 @@ div#splashArea {
   height: 100%;
   width: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
 }
 
 div#welcomeText {
