--- a/src/index.css
+++ b/src/index.css
@@ -52,9 +52,11 @@ div#splashArea {
 }
 
 div#welcomeText {
-  width: 100%;
-  height: 25%;
-  padding: 50px 0 0;
+  width: 700px;
+  padding: 20px 10px;
+  color: #FFF;
+  background: rgba(0,0,0,0.6);
+  font-family: 'Ubuntu', sans-serif;
 }
 
 div#welcomeText h1,
@@ -69,7 +71,7 @@ div#welcomeText h1 {
 }
 
 div#welcomeText h1 {
-  font-size: 50px;
+  font-size: 30px;
 }
 
 .contact-icons {
