--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,17 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+html {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
 p {
   margin: 0;
 }
@@ -38,18 +49,26 @@ html,
 div#root,
 div.App,
 body {
-  height: 100%;
   width: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
   overflow: hidden;
+}
+
+div.App  {
+  overflow-y: scroll; /* Allows scrolling */
+  scrollbar-width: none; /* For Firefox */
+}
+
+div.App::-webkit-scrollbar {
+  display: none; /* For Chrome, Safari, and Edge */
 }
 
 div#splashArea {
   background-image: url('./media/20220626_045937.jpg');
   background-position: center;
   background-size: cover;
-  height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column-reverse;
@@ -90,7 +109,7 @@ div#welcomeText h1 {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  margin: 0 auto;
+  margin: 30px auto;
   height: 80px;
   align-items: center;
 }
@@ -105,7 +124,7 @@ div#splashGreeting {
 }
 
 .icons-box {
-  width: 50%;
+  width: 100%;
   margin: 0 auto;
   display: flex;
   justify-content: space-evenly;
@@ -239,4 +258,8 @@ span#closePortfolio {
 
 #welcomeImage {
   margin: 0 0 30px;
+}
+
+.hike2hike-icon img {
+  border-radius: 50%;
 }
