--- a/src/index.css
+++ b/src/index.css
@@ -56,22 +56,20 @@ body {
   overflow: hidden;
 }
 
+div#root {
+  background-image: url('./media/20220626_045937.jpg');
+  background-position: center;
+  background-size: cover;
+}
+
 div.App  {
   overflow-y: scroll; /* Allows scrolling */
   scrollbar-width: none; /* For Firefox */
+  background: rgba(0,0,0,0.4);
 }
 
 div.App::-webkit-scrollbar {
   display: none; /* For Chrome, Safari, and Edge */
-}
-
-div#splashArea {
-  background-image: url('./media/20220626_045937.jpg');
-  background-position: center;
-  background-size: cover;
-  width: 100%;
-  display: flex;
-  flex-direction: column-reverse;
 }
 
 div#welcomeText {
@@ -79,6 +77,7 @@ div#welcomeText {
   padding: 20px 10px;
   color: #FFF;
   font-family: 'Ubuntu', sans-serif;
+  max-width: 90%;
 }
 
 p.greeting-text {
@@ -110,14 +109,13 @@ div#welcomeText h1 {
   display: flex;
   justify-content: space-between;
   margin: 30px auto;
-  height: 80px;
   align-items: center;
 }
 
-div#splashGreeting {
+/* div#splashGreeting {
   height: 100%;
   background: rgba(0,0,0,0.4);
-}
+} */
 
 .contact-icons .icons-box a {
   width: 100px;
@@ -144,10 +142,7 @@ img#abrahmImage {
 }
 
 div#spalshWelcome {
-  height: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
 }
 
@@ -262,4 +257,13 @@ span#closePortfolio {
 
 .hike2hike-icon img {
   border-radius: 50%;
+}
+
+.contact-icons a {
+  height: 30px;
+  width: 30px;
+}
+
+.contact-icons a img {
+  width: 100%;
 }
