--- a/src/index.css
+++ b/src/index.css
@@ -104,23 +104,6 @@ div#welcomeText h1 {
   font-size: 30px;
 }
 
-.contact-icons {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  margin: 30px auto;
-  align-items: center;
-}
-
-/* div#splashGreeting {
-  height: 100%;
-  background: rgba(0,0,0,0.4);
-} */
-
-.contact-icons .icons-box a {
-  width: 100px;
-}
-
 .icons-box {
   width: 100%;
   margin: 0 auto;
@@ -144,6 +127,8 @@ img#abrahmImage {
 div#spalshWelcome {
   display: flex;
   justify-content: center;
+  height: 100%;
+  align-items: center;
 }
 
 button#showCarousel {
@@ -266,4 +251,36 @@ span#closePortfolio {
 
 .contact-icons a img {
   width: 100%;
+}
+
+#contactIcons {
+  display: flex;
+  width: 80%;
+  flex-direction: column;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.icons-row {
+  display: flex;
+  width: 100%;
+  justify-content: space-evenly;
+  margin: 20px 0;
+}
+
+.icons-row a {
+  width: 50px;
+  height: 50px;
+}
+
+.icons-row a img {
+  width: 100%;
+}
+
+#infoTextBox {
+  display: none;
+}
+
+#splashArea {
+  height: 100%;
 }
