--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,9 @@ div.App  {
   overflow-y: scroll; /* Allows scrolling */
   scrollbar-width: none; /* For Firefox */
   background: rgba(0,0,0,0.4);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 div.App::-webkit-scrollbar {
@@ -292,6 +295,7 @@ span#closePortfolio {
 .welcome-info {
   width: 80%;
   max-width: 600px;
+  position: relative;
 }
 
 .welcome-info h1 {
@@ -303,11 +307,34 @@ span#closePortfolio {
 div#infoTextBox.active {
   display: block;
   position: absolute;
-  top: 50%;
-  width: 80%;
+  top: 0;
+  width: 100%;
   max-width: 600px;
   background: #000000;
   color: #FFFFFF;
   padding: 20px;
   border-radius: 10px;
+}
+
+div#infoBoxTitle {
+  display: flex;
+}
+
+span#closeInfoBox {
+  position: absolute;
+  right: 20px;
+  font-size: 30px;
+  z-index: 1;
+}
+
+div#infoBoxTitle p {
+  display: block;
+  width: 100%;
+}
+
+div#infoBoxTitle p {
+  display: block;
+  width: 100%;
+  margin: 0 0 20px;
+  font-size: 30px;
 }
